Made registering and logging in work with Backendless

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,64 +5,64 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/blue"
-    tools:context=".LoginActivity">
+    tools:context=".loginandregistration.LoginActivity">
 
     <EditText
         android:id="@+id/editText_login_username"
         android:layout_width="186dp"
         android:layout_height="42dp"
         android:layout_marginTop="24dp"
+        android:autofillHints=""
         android:background="@color/creme"
         android:backgroundTint="@color/creme"
         android:hint="@string/username"
+        android:inputType="text"
         android:textAlignment="viewStart"
         android:textColor="@color/darkGreen"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        android:autofillHints=""
-        android:inputType="text" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView_login_text" />
 
     <ImageView
         android:id="@+id/imageView_login_logo"
         android:layout_width="87dp"
         android:layout_height="80dp"
         android:layout_marginTop="48dp"
+        android:contentDescription="@string/meowmedia_image_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@drawable/logo"
-        android:contentDescription="@string/meowmedia_image_logo" />
+        tools:srcCompat="@drawable/logo" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/imageView_login_text"
         android:layout_width="300dp"
         android:layout_height="79dp"
         android:layout_marginTop="24dp"
+        android:contentDescription="@string/meowmedia_text_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView_login_logo"
-        tools:srcCompat="@drawable/title"
-        android:contentDescription="@string/meowmedia_text_logo" />
+        tools:srcCompat="@drawable/title" />
 
     <EditText
         android:id="@+id/editText_login_password"
         android:layout_width="186dp"
         android:layout_height="42dp"
         android:layout_marginTop="8dp"
+        android:autofillHints=""
         android:background="@color/creme"
         android:backgroundTint="@color/creme"
         android:hint="@string/password"
+        android:inputType="textPassword"
         android:textAlignment="viewStart"
         android:textColor="@color/darkGreen"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_login_username"
-        android:inputType="textPassword"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_login_username" />
 
     <Button
         android:id="@+id/button_login_login"
@@ -70,8 +70,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:text="@string/login"
-        app:layout_constraintEnd_toStartOf="@+id/button_login_signup"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText_login_password" />
@@ -80,10 +80,8 @@
         android:id="@+id/button_login_signup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:text="@string/sign_up"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/button_login_login"
-        app:layout_constraintTop_toBottomOf="@+id/editText_login_password" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_login_login" />
 </androidx.constraintlayout.widget.ConstraintLayout>
