--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegistrationActivity">
+    tools:context=".loginandregistration.RegistrationActivity">
 
     <Button
         android:id="@+id/button_registration_register"
@@ -22,76 +22,60 @@
         android:id="@+id/editText_registration_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
         android:layout_marginTop="16dp"
+        android:autofillHints=""
+        android:ems="10"
         android:hint="@string/username"
+        android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_registration_name"
-        android:autofillHints="" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
         android:layout_marginTop="16dp"
-        android:inputType="textPassword"
+        android:autofillHints=""
+        android:ems="10"
         android:hint="@string/password"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/editText_registration_confirmPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_registration_username"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_registration_username" />
 
     <EditText
         android:id="@+id/editText_registration_confirmPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
         android:layout_marginTop="16dp"
-        android:inputType="textPassword"
+        android:autofillHints=""
+        android:ems="10"
         android:hint="@string/confirm_password"
+        android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/editText_registration_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
 
     <EditText
         android:id="@+id/editText_registration_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
         android:layout_marginTop="16dp"
-        android:inputType="textEmailAddress"
+        android:autofillHints=""
+        android:ems="10"
         android:hint="@string/email"
+        android:inputType="textEmailAddress"
         app:layout_constraintBottom_toTopOf="@+id/button_registration_register"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText_registration_confirmPassword"
-        android:autofillHints="" />
-
-    <EditText
-        android:id="@+id/editText_registration_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="@string/name"
-        android:layout_marginTop="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/editText_registration_username"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        android:autofillHints="" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_registration_confirmPassword" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
