--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -23,7 +23,7 @@
         tools:text="chunbae" />
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/imageView_profilePage_profilePicture"
         android:layout_width="93dp"
         android:layout_height="88dp"
         android:layout_marginTop="16dp"
@@ -40,11 +40,11 @@
         android:layout_height="wrap_content"
         android:textColor="@color/darkGreen"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView_profilePage_profilePicture"
         app:layout_constraintEnd_toStartOf="@+id/textView_profilePage_followerCount"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
+        app:layout_constraintStart_toEndOf="@+id/imageView_profilePage_profilePicture"
+        app:layout_constraintTop_toTopOf="@+id/imageView_profilePage_profilePicture"
         tools:text="1152" />
 
     <TextView
@@ -114,12 +114,12 @@
         android:layout_marginTop="32dp"
         android:textColor="@color/darkGreen"
         android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/imageView3"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
+        app:layout_constraintStart_toStartOf="@+id/imageView_profilePage_profilePicture"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_profilePage_profilePicture"
         tools:text="The first and cutest cat on MeowMedia" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_profilePage_follow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -145,7 +145,7 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="spread"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintTop_toBottomOf="@+id/button_profilePage_follow"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
