--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
         android:textSize="18dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView_login_text" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView_main_text" />
 
     <ImageView
         android:id="@+id/imageView_login_logo"
@@ -36,7 +36,7 @@
         tools:srcCompat="@drawable/logo" />
 
     <ImageView
-        android:id="@+id/imageView_login_text"
+        android:id="@+id/imageView_main_text"
         android:layout_width="300dp"
         android:layout_height="79dp"
         android:layout_marginTop="24dp"
