--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,12 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/imageView_login_text"
+        android:id="@+id/imageView_main_text"
         android:layout_width="300dp"
         android:layout_height="79dp"
         android:layout_marginTop="16dp"
@@ -19,6 +20,7 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_main_postsList"
         android:layout_width="409dp"
         android:layout_height="634dp"
         tools:layout_editor_absoluteX="1dp"
