--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -20,7 +20,7 @@
         tools:srcCompat="@drawable/logo" />
 
     <ImageView
-        android:id="@+id/imageView_login_text"
+        android:id="@+id/imageView_main_text"
         android:layout_width="300dp"
         android:layout_height="79dp"
         android:layout_marginTop="8dp"
@@ -62,7 +62,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView_login_text" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView_main_text" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
