designed post view

--- a/app/src/main/res/layout/activity_make_post.xml
+++ b/app/src/main/res/layout/activity_make_post.xml
@@ -5,12 +5,14 @@
     android:id="@+id/layout_makePost"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/creme"
     tools:context=".MakePostActivity">
 
     <ImageView
         android:id="@+id/imageView_makePost_content"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline_makePost_midpoint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -22,15 +24,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="365dp" />
+        app:layout_constraintGuide_end="357dp" />
 
     <TextView
         android:id="@+id/textView_makePost_title"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
+        android:background="@color/blue"
         android:hint="Title"
         android:textAlignment="center"
+        android:textColor="@color/darkBlue"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,10 +46,14 @@
         android:id="@+id/textView_makePost_description"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
+        android:layout_marginEnd="24dp"
         android:layout_marginBottom="8dp"
+        android:background="@color/blue"
         android:hint="Description"
         android:textAlignment="viewStart"
+        android:textColor="@color/darkBlue"
         app:layout_constraintBottom_toTopOf="@+id/button_makePost_makePost"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,9 +64,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
+        android:backgroundTint="@color/darkBlue"
         android:text="Make Post"
+        android:textColor="@color/green"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <VideoView
+        android:id="@+id/videoView_makePost_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline_makePost_midpoint"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
